apps/http-echo/ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: uat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: http-echo
            port:
              number: 80
